# ContigDifference

./: .gitignore  CMakeLists.txt  README.md  decodeCommand.c  decodeCommand.h  main.c
Contig/: contig.c  contig.h
Foundation/: Directory.c  Directory.h  typedef.h
Foundation/Array/String/: StringArray.h
Utils/: directory.c  directory.h  typedef.h
Utils/Array/String/: StringArray.c
Utils/String/: String.c  String.h
